@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Module for managing localization import and export',
 	'category' => 'module',
 	'shy' => 0,
-	'version' => '4.0.9',
+	'version' => '4.0.10',
 	'dependencies' => 'static_info_tables, mvc, picocontainer',
 	'conflicts' => '',
 	'priority' => '',
