@@ -1,3 +1,6 @@
+2009-08-04 Michael Klapper <michael.klapper@aoemedia.de>
+	* Improve CType HTML handling for import. HTML content breaks if they are imported through the textConverter::toText
+
 2009-05-12 Michael Klapper <michael.klapper@aoemedia.de>
 	* Improve tx_l10nmgr_service_textConverter testcases
 
